--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>json-v tests</title>
+    <title>jesquema tests</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="mocha.css" />
     <script src="unorm.js"></script>
