--- a/test/index.html
+++ b/test/index.html
@@ -51,12 +51,14 @@
     <script src="suite/minLength.js"></script>
     <script src="suite/maxLength.js"></script>
     <script src="suite/pattern.js"></script>
+    <script src="suite/format.js"></script>
     <!--- disable ref tests
       <script src="suite/definitions.js"></script> 
       <script src="suite/ref.js"></script> 
       <script src="suite/refRemote.js"></script> 
     -->
     <script src="suite.js"></script>
+    <script src="tests.js"></script>
     <script>
       mocha.run();
     </script>
