implement local dereferencing - add context.scope() - add URL simple wrapper around window.URL - add Pointer JSON pointer implementation - refactor Context slightly to use Pointer (needs more) - add Cache (deref index) - add deref_tests - enable suite/ref and suite/refRemote although the remote   ones currently fail

--- a/test/index.html
+++ b/test/index.html
@@ -52,13 +52,12 @@
     <script src="suite/maxLength.js"></script>
     <script src="suite/pattern.js"></script>
     <script src="suite/format.js"></script>
-    <!--- disable ref tests
       <script src="suite/definitions.js"></script> 
       <script src="suite/ref.js"></script> 
       <script src="suite/refRemote.js"></script> 
-    -->
     <script src="suite.js"></script>
     <script src="tests.js"></script>
+    <script src="deref_tests.js"></script>
     <script>
       mocha.run();
     </script>
